tests/ui/sized-hierarchy/pretty-print-opaque.stderr
error[E0432]: unresolved import `std::marker::SizeOfVal`
  --> $DIR/pretty-print-opaque.rs:4:19
   |
LL | use std::marker::{SizeOfVal, PointeeSized};
   |                   ^^^^^^^^^ no `SizeOfVal` in `marker`

error[E0277]: the size for values of type `impl Tr + PointeeSized` cannot be known
  --> $DIR/pretty-print-opaque.rs:35:26
   |
LL | pub fn pointeesized() -> Box<impl Tr + PointeeSized> {
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a known size
   |
   = help: the nightly-only, unstable trait `MetaSized` is not implemented for `impl Tr + PointeeSized`
note: required by a bound in `Box`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0432.
For more information about an error, try `rustc --explain E0277`.
